// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Summary Should Initial Load All Itens 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    style="overflow: visible;"
  >
    <div>
      <div
        class="sc-bdVaJa hYqYgx"
      >
        <div
          class="sc-bwzfXH kiQaOY"
        >
          <div
            class="sc-htpNat hbroam"
          >
            <span
              class="sc-bZQynM dGchKM"
              data-test="TitleSummary"
            >
              EXCHANGE_SUMMARY
            </span>
            <span
              class="sc-kAzzGY bpboDy"
              data-test="ExchangeValueTitle"
            >
              EXCHANGE_VALUE_TO_CONVERT
            </span>
            <div
              class="sc-bxivhb bfTVxd"
            >
              <span
                class="sc-ifAKCX jsgjCC"
                data-test="ExchangeCurrency"
              >
                USD
              </span>
              <span
                class="sc-EHOje WmlQ"
                data-test="ExchangeValue"
              >
                50,000.00
              </span>
            </div>
            <span
              class="sc-kAzzGY bpboDy"
              data-test="ExchangeBeneficiary"
            >
              EXCHANGE_BENEFICIARY
            </span>
            <span
              class="sc-chPdSV hwfXHx"
              data-test="ExchangeFavoredName"
            >
              Maria Lima
            </span>
            <span
              class="sc-chPdSV hwfXHx"
              data-test="ExchangeFavoredAccountNumber"
            >
              EXCHANGE_ACCOUNT 303030
            </span>
            <span
              class="sc-chPdSV hwfXHx"
              data-test="ExchangeBankName"
            >
              EXCHANGE_BANK Bocom BBM
            </span>
            <span
              class="sc-chPdSV hwfXHx"
              data-test="ExchangeSwiftCode"
            >
              SWIFTCode BBINBRRJXXX
            </span>
            <span
              class="sc-kAzzGY bpboDy"
              data-test="ExchangeAccountDebit"
            >
              EXCHANGE_ACCOUNT_TO_DEBIT
            </span>
            <span
              class="sc-chPdSV hwfXHx"
              data-test="AccountNumber"
            />
            <span
              class="sc-kAzzGY bpboDy"
              data-test="ExchangeTotalAmount"
            >
              EXCHANGE_TOTAL_AMOUNT_DEBIT
            </span>
            <span
              class="sc-chPdSV hwfXHx"
              data-test="ExchangeValueCoin"
            >
              BRL
               
              40,251.10
            </span>
            <span
              class="sc-kAzzGY bpboDy"
              data-test="ExchangeTypeOperation"
            >
              EXCHANGE_TYPE_OPERATION
            </span>
            <span
              class="sc-chPdSV hwfXHx"
              data-test="ExchangeNature"
            />
            <span
              class="sc-kAzzGY bpboDy"
              data-test="ExchangePrice"
            >
              EXCHANGE_PRICE
            </span>
            <span
              class="sc-chPdSV hwfXHx"
              data-test="ExchangeValuePrice"
            >
              BRL
               
              4.96
            </span>
            <span
              class="sc-kAzzGY bpboDy"
              data-test="ExchangeFEES"
            >
              EXCHANGE_FEES
            </span>
            <span
              class="sc-chPdSV hwfXHx"
              data-test="ExchangeValueFEES"
            >
              BRL
               
              4.92
            </span>
            <span
              class="sc-kAzzGY bpboDy"
              data-test="ExchangeIOF"
            >
              EXCHANGE_IOF
            </span>
            <span
              class="sc-chPdSV hwfXHx"
              data-test="ExchangeValueIOF"
            >
              BRL
               
              2.68
            </span>
            <span
              class="sc-kAzzGY bpboDy"
              data-test="ExchangeVET"
            >
              EXCHANGE_VET
            </span>
            <span
              class="sc-chPdSV hwfXHx"
              data-test="ExchangeValueVET"
            >
              BRL
               
              5.02
            </span>
            <span
              class="sc-kAzzGY bpboDy"
              data-test="ExchangeDateDebit"
            >
              EXCHANGE_DATE_DEBIT
            </span>
            <span
              class="sc-chPdSV hwfXHx"
              data-test="ExchangeDateDebitValue"
            >
              06/01/2010
            </span>
            <span
              class="sc-kAzzGY bpboDy"
              data-test="ExchangeDateCredit"
            >
              EXCHANGE_DATE_CREDIT
            </span>
            <span
              class="sc-chPdSV hwfXHx"
              data-test="ExchangeDateCreditValue"
            >
              06/01/2010
            </span>
          </div>
        </div>
      </div>
      <div
        class="sc-VigVT fJjbvY"
        data-test="ExchangeTimer"
      >
        <span
          class="sc-jzJRlG iQhEUF"
        >
          <svg
            fill="none"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 0C8.02219 0 6.08879 0.58649 4.4443 1.6853C2.79981 2.78412 1.51809 4.3459 0.761209 6.17317C0.00433284 8.00043 -0.193701 10.0111 0.192152 11.9509C0.578004 13.8907 1.53041 15.6725 2.92894 17.0711C4.32746 18.4696 6.10929 19.422 8.0491 19.8079C9.98891 20.1937 11.9996 19.9957 13.8268 19.2388C15.6541 18.4819 17.2159 17.2002 18.3147 15.5557C19.4135 13.9112 20 11.9778 20 10C20 8.68678 19.7413 7.38642 19.2388 6.17317C18.7363 4.95991 17.9997 3.85752 17.0711 2.92893C16.1425 2.00035 15.0401 1.26375 13.8268 0.761205C12.6136 0.258658 11.3132 0 10 0ZM14 11H10C9.73479 11 9.48043 10.8946 9.2929 10.7071C9.10536 10.5196 9 10.2652 9 10V6C9 5.73478 9.10536 5.48043 9.2929 5.29289C9.48043 5.10536 9.73479 5 10 5C10.2652 5 10.5196 5.10536 10.7071 5.29289C10.8946 5.48043 11 5.73478 11 6V9H14C14.2652 9 14.5196 9.10536 14.7071 9.29289C14.8946 9.48043 15 9.73478 15 10C15 10.2652 14.8946 10.5196 14.7071 10.7071C14.5196 10.8946 14.2652 11 14 11Z"
              fill="#3976CF"
            />
          </svg>
        </span>
        <div
          class="sc-fjdhpX iUcPUh"
        >
          <span
            class="sc-jTzLTM dznmVL"
          >
            EXCHANGE_TIMER_TEXT
          </span>
          <span
            class="sc-jTzLTM dznmVL"
          >
            3
          </span>
          <span
            class="sc-jTzLTM dznmVL"
          >
            EXCHANGE_TIMER_TEXT_MIN
          </span>
          <span
            class="sc-jTzLTM dznmVL"
          >
            0
          </span>
          <span
            class="sc-jTzLTM dznmVL"
          >
            EXCHANGE_TIMER_TEXT_SEC
          </span>
        </div>
      </div>
      <div
        class="sc-kgoBCf hFliXa"
      >
        <button
          class="sc-cMljjf hqfGDE"
          data-test="BackButtonSummary"
          style="width: 100%;"
          type="outline"
        >
          <div
            class="sc-jAaTju coBPIt"
          >
            <div
              class="sc-jDwBTQ iIKeUD"
            >
              BACK
            </div>
          </div>
        </button>
        <button
          class="sc-cMljjf cxnipR"
          data-test="ContinueButtonSummary"
          style="width: 100%;"
          type="button"
        >
          <div
            class="sc-jAaTju coBPIt"
          >
            <div
              class="sc-jDwBTQ iIKeUD"
            >
              SEND
            </div>
          </div>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-bdVaJa hYqYgx"
    >
      <div
        class="sc-bwzfXH kiQaOY"
      >
        <div
          class="sc-htpNat hbroam"
        >
          <span
            class="sc-bZQynM dGchKM"
            data-test="TitleSummary"
          >
            EXCHANGE_SUMMARY
          </span>
          <span
            class="sc-kAzzGY bpboDy"
            data-test="ExchangeValueTitle"
          >
            EXCHANGE_VALUE_TO_CONVERT
          </span>
          <div
            class="sc-bxivhb bfTVxd"
          >
            <span
              class="sc-ifAKCX jsgjCC"
              data-test="ExchangeCurrency"
            >
              USD
            </span>
            <span
              class="sc-EHOje WmlQ"
              data-test="ExchangeValue"
            >
              50,000.00
            </span>
          </div>
          <span
            class="sc-kAzzGY bpboDy"
            data-test="ExchangeBeneficiary"
          >
            EXCHANGE_BENEFICIARY
          </span>
          <span
            class="sc-chPdSV hwfXHx"
            data-test="ExchangeFavoredName"
          >
            Maria Lima
          </span>
          <span
            class="sc-chPdSV hwfXHx"
            data-test="ExchangeFavoredAccountNumber"
          >
            EXCHANGE_ACCOUNT 303030
          </span>
          <span
            class="sc-chPdSV hwfXHx"
            data-test="ExchangeBankName"
          >
            EXCHANGE_BANK Bocom BBM
          </span>
          <span
            class="sc-chPdSV hwfXHx"
            data-test="ExchangeSwiftCode"
          >
            SWIFTCode BBINBRRJXXX
          </span>
          <span
            class="sc-kAzzGY bpboDy"
            data-test="ExchangeAccountDebit"
          >
            EXCHANGE_ACCOUNT_TO_DEBIT
          </span>
          <span
            class="sc-chPdSV hwfXHx"
            data-test="AccountNumber"
          />
          <span
            class="sc-kAzzGY bpboDy"
            data-test="ExchangeTotalAmount"
          >
            EXCHANGE_TOTAL_AMOUNT_DEBIT
          </span>
          <span
            class="sc-chPdSV hwfXHx"
            data-test="ExchangeValueCoin"
          >
            BRL
             
            40,251.10
          </span>
          <span
            class="sc-kAzzGY bpboDy"
            data-test="ExchangeTypeOperation"
          >
            EXCHANGE_TYPE_OPERATION
          </span>
          <span
            class="sc-chPdSV hwfXHx"
            data-test="ExchangeNature"
          />
          <span
            class="sc-kAzzGY bpboDy"
            data-test="ExchangePrice"
          >
            EXCHANGE_PRICE
          </span>
          <span
            class="sc-chPdSV hwfXHx"
            data-test="ExchangeValuePrice"
          >
            BRL
             
            4.96
          </span>
          <span
            class="sc-kAzzGY bpboDy"
            data-test="ExchangeFEES"
          >
            EXCHANGE_FEES
          </span>
          <span
            class="sc-chPdSV hwfXHx"
            data-test="ExchangeValueFEES"
          >
            BRL
             
            4.92
          </span>
          <span
            class="sc-kAzzGY bpboDy"
            data-test="ExchangeIOF"
          >
            EXCHANGE_IOF
          </span>
          <span
            class="sc-chPdSV hwfXHx"
            data-test="ExchangeValueIOF"
          >
            BRL
             
            2.68
          </span>
          <span
            class="sc-kAzzGY bpboDy"
            data-test="ExchangeVET"
          >
            EXCHANGE_VET
          </span>
          <span
            class="sc-chPdSV hwfXHx"
            data-test="ExchangeValueVET"
          >
            BRL
             
            5.02
          </span>
          <span
            class="sc-kAzzGY bpboDy"
            data-test="ExchangeDateDebit"
          >
            EXCHANGE_DATE_DEBIT
          </span>
          <span
            class="sc-chPdSV hwfXHx"
            data-test="ExchangeDateDebitValue"
          >
            06/01/2010
          </span>
          <span
            class="sc-kAzzGY bpboDy"
            data-test="ExchangeDateCredit"
          >
            EXCHANGE_DATE_CREDIT
          </span>
          <span
            class="sc-chPdSV hwfXHx"
            data-test="ExchangeDateCreditValue"
          >
            06/01/2010
          </span>
        </div>
      </div>
    </div>
    <div
      class="sc-VigVT fJjbvY"
      data-test="ExchangeTimer"
    >
      <span
        class="sc-jzJRlG iQhEUF"
      >
        <svg
          fill="none"
          height="20"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 0C8.02219 0 6.08879 0.58649 4.4443 1.6853C2.79981 2.78412 1.51809 4.3459 0.761209 6.17317C0.00433284 8.00043 -0.193701 10.0111 0.192152 11.9509C0.578004 13.8907 1.53041 15.6725 2.92894 17.0711C4.32746 18.4696 6.10929 19.422 8.0491 19.8079C9.98891 20.1937 11.9996 19.9957 13.8268 19.2388C15.6541 18.4819 17.2159 17.2002 18.3147 15.5557C19.4135 13.9112 20 11.9778 20 10C20 8.68678 19.7413 7.38642 19.2388 6.17317C18.7363 4.95991 17.9997 3.85752 17.0711 2.92893C16.1425 2.00035 15.0401 1.26375 13.8268 0.761205C12.6136 0.258658 11.3132 0 10 0ZM14 11H10C9.73479 11 9.48043 10.8946 9.2929 10.7071C9.10536 10.5196 9 10.2652 9 10V6C9 5.73478 9.10536 5.48043 9.2929 5.29289C9.48043 5.10536 9.73479 5 10 5C10.2652 5 10.5196 5.10536 10.7071 5.29289C10.8946 5.48043 11 5.73478 11 6V9H14C14.2652 9 14.5196 9.10536 14.7071 9.29289C14.8946 9.48043 15 9.73478 15 10C15 10.2652 14.8946 10.5196 14.7071 10.7071C14.5196 10.8946 14.2652 11 14 11Z"
            fill="#3976CF"
          />
        </svg>
      </span>
      <div
        class="sc-fjdhpX iUcPUh"
      >
        <span
          class="sc-jTzLTM dznmVL"
        >
          EXCHANGE_TIMER_TEXT
        </span>
        <span
          class="sc-jTzLTM dznmVL"
        >
          3
        </span>
        <span
          class="sc-jTzLTM dznmVL"
        >
          EXCHANGE_TIMER_TEXT_MIN
        </span>
        <span
          class="sc-jTzLTM dznmVL"
        >
          0
        </span>
        <span
          class="sc-jTzLTM dznmVL"
        >
          EXCHANGE_TIMER_TEXT_SEC
        </span>
      </div>
    </div>
    <div
      class="sc-kgoBCf hFliXa"
    >
      <button
        class="sc-cMljjf hqfGDE"
        data-test="BackButtonSummary"
        style="width: 100%;"
        type="outline"
      >
        <div
          class="sc-jAaTju coBPIt"
        >
          <div
            class="sc-jDwBTQ iIKeUD"
          >
            BACK
          </div>
        </div>
      </button>
      <button
        class="sc-cMljjf cxnipR"
        data-test="ContinueButtonSummary"
        style="width: 100%;"
        type="button"
      >
        <div
          class="sc-jAaTju coBPIt"
        >
          <div
            class="sc-jDwBTQ iIKeUD"
          >
            SEND
          </div>
        </div>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Summary Should Initial Load When favored Not Exist 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    style="overflow: visible;"
  >
    <div>
      <div
        class="sc-bdVaJa hYqYgx"
      >
        <div
          class="sc-bwzfXH kiQaOY"
        >
          <div
            class="sc-htpNat hbroam"
          >
            <span
              class="sc-bZQynM dGchKM"
              data-test="TitleSummary"
            >
              EXCHANGE_SUMMARY
            </span>
            <span
              class="sc-kAzzGY bpboDy"
              data-test="ExchangeValueTitle"
            >
              EXCHANGE_VALUE_TO_CONVERT
            </span>
            <span
              class="sc-kAzzGY bpboDy"
              data-test="ExchangeBeneficiary"
            >
              EXCHANGE_BENEFICIARY
            </span>
            <span
              class="sc-kAzzGY bpboDy"
              data-test="ExchangeAccountDebit"
            >
              EXCHANGE_ACCOUNT_TO_DEBIT
            </span>
            <span
              class="sc-chPdSV hwfXHx"
              data-test="AccountNumber"
            />
            <span
              class="sc-kAzzGY bpboDy"
              data-test="ExchangeTotalAmount"
            >
              EXCHANGE_TOTAL_AMOUNT_DEBIT
            </span>
            <span
              class="sc-kAzzGY bpboDy"
              data-test="ExchangeTypeOperation"
            >
              EXCHANGE_TYPE_OPERATION
            </span>
            <span
              class="sc-chPdSV hwfXHx"
              data-test="ExchangeNature"
            />
            <span
              class="sc-kAzzGY bpboDy"
              data-test="ExchangePrice"
            >
              EXCHANGE_PRICE
            </span>
            <span
              class="sc-kAzzGY bpboDy"
              data-test="ExchangeFEES"
            >
              EXCHANGE_FEES
            </span>
            <span
              class="sc-kAzzGY bpboDy"
              data-test="ExchangeIOF"
            >
              EXCHANGE_IOF
            </span>
            <span
              class="sc-kAzzGY bpboDy"
              data-test="ExchangeVET"
            >
              EXCHANGE_VET
            </span>
            <span
              class="sc-kAzzGY bpboDy"
              data-test="ExchangeDateDebit"
            >
              EXCHANGE_DATE_DEBIT
            </span>
            <span
              class="sc-kAzzGY bpboDy"
              data-test="ExchangeDateCredit"
            >
              EXCHANGE_DATE_CREDIT
            </span>
          </div>
        </div>
      </div>
      <div
        class="sc-VigVT fJjbvY"
        data-test="ExchangeTimer"
      >
        <span
          class="sc-jzJRlG iQhEUF"
        >
          <svg
            fill="none"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 0C8.02219 0 6.08879 0.58649 4.4443 1.6853C2.79981 2.78412 1.51809 4.3459 0.761209 6.17317C0.00433284 8.00043 -0.193701 10.0111 0.192152 11.9509C0.578004 13.8907 1.53041 15.6725 2.92894 17.0711C4.32746 18.4696 6.10929 19.422 8.0491 19.8079C9.98891 20.1937 11.9996 19.9957 13.8268 19.2388C15.6541 18.4819 17.2159 17.2002 18.3147 15.5557C19.4135 13.9112 20 11.9778 20 10C20 8.68678 19.7413 7.38642 19.2388 6.17317C18.7363 4.95991 17.9997 3.85752 17.0711 2.92893C16.1425 2.00035 15.0401 1.26375 13.8268 0.761205C12.6136 0.258658 11.3132 0 10 0ZM14 11H10C9.73479 11 9.48043 10.8946 9.2929 10.7071C9.10536 10.5196 9 10.2652 9 10V6C9 5.73478 9.10536 5.48043 9.2929 5.29289C9.48043 5.10536 9.73479 5 10 5C10.2652 5 10.5196 5.10536 10.7071 5.29289C10.8946 5.48043 11 5.73478 11 6V9H14C14.2652 9 14.5196 9.10536 14.7071 9.29289C14.8946 9.48043 15 9.73478 15 10C15 10.2652 14.8946 10.5196 14.7071 10.7071C14.5196 10.8946 14.2652 11 14 11Z"
              fill="#3976CF"
            />
          </svg>
        </span>
        <div
          class="sc-fjdhpX iUcPUh"
        >
          <span
            class="sc-jTzLTM dznmVL"
          >
            EXCHANGE_TIMER_TEXT
          </span>
          <span
            class="sc-jTzLTM dznmVL"
          >
            3
          </span>
          <span
            class="sc-jTzLTM dznmVL"
          >
            EXCHANGE_TIMER_TEXT_MIN
          </span>
          <span
            class="sc-jTzLTM dznmVL"
          >
            0
          </span>
          <span
            class="sc-jTzLTM dznmVL"
          >
            EXCHANGE_TIMER_TEXT_SEC
          </span>
        </div>
      </div>
      <div
        class="sc-kgoBCf hFliXa"
      >
        <button
          class="sc-cMljjf hqfGDE"
          data-test="BackButtonSummary"
          style="width: 100%;"
          type="outline"
        >
          <div
            class="sc-jAaTju coBPIt"
          >
            <div
              class="sc-jDwBTQ iIKeUD"
            >
              BACK
            </div>
          </div>
        </button>
        <button
          class="sc-cMljjf cxnipR"
          data-test="ContinueButtonSummary"
          style="width: 100%;"
          type="button"
        >
          <div
            class="sc-jAaTju coBPIt"
          >
            <div
              class="sc-jDwBTQ iIKeUD"
            >
              SEND
            </div>
          </div>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-bdVaJa hYqYgx"
    >
      <div
        class="sc-bwzfXH kiQaOY"
      >
        <div
          class="sc-htpNat hbroam"
        >
          <span
            class="sc-bZQynM dGchKM"
            data-test="TitleSummary"
          >
            EXCHANGE_SUMMARY
          </span>
          <span
            class="sc-kAzzGY bpboDy"
            data-test="ExchangeValueTitle"
          >
            EXCHANGE_VALUE_TO_CONVERT
          </span>
          <span
            class="sc-kAzzGY bpboDy"
            data-test="ExchangeBeneficiary"
          >
            EXCHANGE_BENEFICIARY
          </span>
          <span
            class="sc-kAzzGY bpboDy"
            data-test="ExchangeAccountDebit"
          >
            EXCHANGE_ACCOUNT_TO_DEBIT
          </span>
          <span
            class="sc-chPdSV hwfXHx"
            data-test="AccountNumber"
          />
          <span
            class="sc-kAzzGY bpboDy"
            data-test="ExchangeTotalAmount"
          >
            EXCHANGE_TOTAL_AMOUNT_DEBIT
          </span>
          <span
            class="sc-kAzzGY bpboDy"
            data-test="ExchangeTypeOperation"
          >
            EXCHANGE_TYPE_OPERATION
          </span>
          <span
            class="sc-chPdSV hwfXHx"
            data-test="ExchangeNature"
          />
          <span
            class="sc-kAzzGY bpboDy"
            data-test="ExchangePrice"
          >
            EXCHANGE_PRICE
          </span>
          <span
            class="sc-kAzzGY bpboDy"
            data-test="ExchangeFEES"
          >
            EXCHANGE_FEES
          </span>
          <span
            class="sc-kAzzGY bpboDy"
            data-test="ExchangeIOF"
          >
            EXCHANGE_IOF
          </span>
          <span
            class="sc-kAzzGY bpboDy"
            data-test="ExchangeVET"
          >
            EXCHANGE_VET
          </span>
          <span
            class="sc-kAzzGY bpboDy"
            data-test="ExchangeDateDebit"
          >
            EXCHANGE_DATE_DEBIT
          </span>
          <span
            class="sc-kAzzGY bpboDy"
            data-test="ExchangeDateCredit"
          >
            EXCHANGE_DATE_CREDIT
          </span>
        </div>
      </div>
    </div>
    <div
      class="sc-VigVT fJjbvY"
      data-test="ExchangeTimer"
    >
      <span
        class="sc-jzJRlG iQhEUF"
      >
        <svg
          fill="none"
          height="20"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 0C8.02219 0 6.08879 0.58649 4.4443 1.6853C2.79981 2.78412 1.51809 4.3459 0.761209 6.17317C0.00433284 8.00043 -0.193701 10.0111 0.192152 11.9509C0.578004 13.8907 1.53041 15.6725 2.92894 17.0711C4.32746 18.4696 6.10929 19.422 8.0491 19.8079C9.98891 20.1937 11.9996 19.9957 13.8268 19.2388C15.6541 18.4819 17.2159 17.2002 18.3147 15.5557C19.4135 13.9112 20 11.9778 20 10C20 8.68678 19.7413 7.38642 19.2388 6.17317C18.7363 4.95991 17.9997 3.85752 17.0711 2.92893C16.1425 2.00035 15.0401 1.26375 13.8268 0.761205C12.6136 0.258658 11.3132 0 10 0ZM14 11H10C9.73479 11 9.48043 10.8946 9.2929 10.7071C9.10536 10.5196 9 10.2652 9 10V6C9 5.73478 9.10536 5.48043 9.2929 5.29289C9.48043 5.10536 9.73479 5 10 5C10.2652 5 10.5196 5.10536 10.7071 5.29289C10.8946 5.48043 11 5.73478 11 6V9H14C14.2652 9 14.5196 9.10536 14.7071 9.29289C14.8946 9.48043 15 9.73478 15 10C15 10.2652 14.8946 10.5196 14.7071 10.7071C14.5196 10.8946 14.2652 11 14 11Z"
            fill="#3976CF"
          />
        </svg>
      </span>
      <div
        class="sc-fjdhpX iUcPUh"
      >
        <span
          class="sc-jTzLTM dznmVL"
        >
          EXCHANGE_TIMER_TEXT
        </span>
        <span
          class="sc-jTzLTM dznmVL"
        >
          3
        </span>
        <span
          class="sc-jTzLTM dznmVL"
        >
          EXCHANGE_TIMER_TEXT_MIN
        </span>
        <span
          class="sc-jTzLTM dznmVL"
        >
          0
        </span>
        <span
          class="sc-jTzLTM dznmVL"
        >
          EXCHANGE_TIMER_TEXT_SEC
        </span>
      </div>
    </div>
    <div
      class="sc-kgoBCf hFliXa"
    >
      <button
        class="sc-cMljjf hqfGDE"
        data-test="BackButtonSummary"
        style="width: 100%;"
        type="outline"
      >
        <div
          class="sc-jAaTju coBPIt"
        >
          <div
            class="sc-jDwBTQ iIKeUD"
          >
            BACK
          </div>
        </div>
      </button>
      <button
        class="sc-cMljjf cxnipR"
        data-test="ContinueButtonSummary"
        style="width: 100%;"
        type="button"
      >
        <div
          class="sc-jAaTju coBPIt"
        >
          <div
            class="sc-jDwBTQ iIKeUD"
          >
            SEND
          </div>
        </div>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Summary Should Initial Load When selectedAccount Not Exist 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    style="overflow: visible;"
  >
    <div>
      <div
        class="sc-bdVaJa hYqYgx"
      >
        <div
          class="sc-bwzfXH kiQaOY"
        >
          <div
            class="sc-htpNat hbroam"
          >
            <span
              class="sc-bZQynM dGchKM"
              data-test="TitleSummary"
            >
              EXCHANGE_SUMMARY
            </span>
            <span
              class="sc-kAzzGY bpboDy"
              data-test="ExchangeValueTitle"
            >
              EXCHANGE_VALUE_TO_CONVERT
            </span>
            <span
              class="sc-kAzzGY bpboDy"
              data-test="ExchangeBeneficiary"
            >
              EXCHANGE_BENEFICIARY
            </span>
            <span
              class="sc-chPdSV hwfXHx"
              data-test="ExchangeFavoredName"
            >
              MockNameTest
            </span>
            <span
              class="sc-chPdSV hwfXHx"
              data-test="ExchangeFavoredAccountNumber"
            >
              EXCHANGE_ACCOUNT 
            </span>
            <span
              class="sc-chPdSV hwfXHx"
              data-test="ExchangeBankName"
            >
              EXCHANGE_BANK 
            </span>
            <span
              class="sc-chPdSV hwfXHx"
              data-test="ExchangeSwiftCode"
            >
              SWIFTCode 
            </span>
            <span
              class="sc-kAzzGY bpboDy"
              data-test="ExchangeAccountDebit"
            >
              EXCHANGE_ACCOUNT_TO_DEBIT
            </span>
            <span
              class="sc-kAzzGY bpboDy"
              data-test="ExchangeTotalAmount"
            >
              EXCHANGE_TOTAL_AMOUNT_DEBIT
            </span>
            <span
              class="sc-kAzzGY bpboDy"
              data-test="ExchangeTypeOperation"
            >
              EXCHANGE_TYPE_OPERATION
            </span>
            <span
              class="sc-chPdSV hwfXHx"
              data-test="ExchangeNature"
            />
            <span
              class="sc-kAzzGY bpboDy"
              data-test="ExchangePrice"
            >
              EXCHANGE_PRICE
            </span>
            <span
              class="sc-kAzzGY bpboDy"
              data-test="ExchangeFEES"
            >
              EXCHANGE_FEES
            </span>
            <span
              class="sc-kAzzGY bpboDy"
              data-test="ExchangeIOF"
            >
              EXCHANGE_IOF
            </span>
            <span
              class="sc-kAzzGY bpboDy"
              data-test="ExchangeVET"
            >
              EXCHANGE_VET
            </span>
            <span
              class="sc-kAzzGY bpboDy"
              data-test="ExchangeDateDebit"
            >
              EXCHANGE_DATE_DEBIT
            </span>
            <span
              class="sc-kAzzGY bpboDy"
              data-test="ExchangeDateCredit"
            >
              EXCHANGE_DATE_CREDIT
            </span>
          </div>
        </div>
      </div>
      <div
        class="sc-VigVT fJjbvY"
        data-test="ExchangeTimer"
      >
        <span
          class="sc-jzJRlG iQhEUF"
        >
          <svg
            fill="none"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 0C8.02219 0 6.08879 0.58649 4.4443 1.6853C2.79981 2.78412 1.51809 4.3459 0.761209 6.17317C0.00433284 8.00043 -0.193701 10.0111 0.192152 11.9509C0.578004 13.8907 1.53041 15.6725 2.92894 17.0711C4.32746 18.4696 6.10929 19.422 8.0491 19.8079C9.98891 20.1937 11.9996 19.9957 13.8268 19.2388C15.6541 18.4819 17.2159 17.2002 18.3147 15.5557C19.4135 13.9112 20 11.9778 20 10C20 8.68678 19.7413 7.38642 19.2388 6.17317C18.7363 4.95991 17.9997 3.85752 17.0711 2.92893C16.1425 2.00035 15.0401 1.26375 13.8268 0.761205C12.6136 0.258658 11.3132 0 10 0ZM14 11H10C9.73479 11 9.48043 10.8946 9.2929 10.7071C9.10536 10.5196 9 10.2652 9 10V6C9 5.73478 9.10536 5.48043 9.2929 5.29289C9.48043 5.10536 9.73479 5 10 5C10.2652 5 10.5196 5.10536 10.7071 5.29289C10.8946 5.48043 11 5.73478 11 6V9H14C14.2652 9 14.5196 9.10536 14.7071 9.29289C14.8946 9.48043 15 9.73478 15 10C15 10.2652 14.8946 10.5196 14.7071 10.7071C14.5196 10.8946 14.2652 11 14 11Z"
              fill="#3976CF"
            />
          </svg>
        </span>
        <div
          class="sc-fjdhpX iUcPUh"
        >
          <span
            class="sc-jTzLTM dznmVL"
          >
            EXCHANGE_TIMER_TEXT
          </span>
          <span
            class="sc-jTzLTM dznmVL"
          >
            3
          </span>
          <span
            class="sc-jTzLTM dznmVL"
          >
            EXCHANGE_TIMER_TEXT_MIN
          </span>
          <span
            class="sc-jTzLTM dznmVL"
          >
            0
          </span>
          <span
            class="sc-jTzLTM dznmVL"
          >
            EXCHANGE_TIMER_TEXT_SEC
          </span>
        </div>
      </div>
      <div
        class="sc-kgoBCf hFliXa"
      >
        <button
          class="sc-cMljjf hqfGDE"
          data-test="BackButtonSummary"
          style="width: 100%;"
          type="outline"
        >
          <div
            class="sc-jAaTju coBPIt"
          >
            <div
              class="sc-jDwBTQ iIKeUD"
            >
              BACK
            </div>
          </div>
        </button>
        <button
          class="sc-cMljjf cxnipR"
          data-test="ContinueButtonSummary"
          style="width: 100%;"
          type="button"
        >
          <div
            class="sc-jAaTju coBPIt"
          >
            <div
              class="sc-jDwBTQ iIKeUD"
            >
              SEND
            </div>
          </div>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-bdVaJa hYqYgx"
    >
      <div
        class="sc-bwzfXH kiQaOY"
      >
        <div
          class="sc-htpNat hbroam"
        >
          <span
            class="sc-bZQynM dGchKM"
            data-test="TitleSummary"
          >
            EXCHANGE_SUMMARY
          </span>
          <span
            class="sc-kAzzGY bpboDy"
            data-test="ExchangeValueTitle"
          >
            EXCHANGE_VALUE_TO_CONVERT
          </span>
          <span
            class="sc-kAzzGY bpboDy"
            data-test="ExchangeBeneficiary"
          >
            EXCHANGE_BENEFICIARY
          </span>
          <span
            class="sc-chPdSV hwfXHx"
            data-test="ExchangeFavoredName"
          >
            MockNameTest
          </span>
          <span
            class="sc-chPdSV hwfXHx"
            data-test="ExchangeFavoredAccountNumber"
          >
            EXCHANGE_ACCOUNT 
          </span>
          <span
            class="sc-chPdSV hwfXHx"
            data-test="ExchangeBankName"
          >
            EXCHANGE_BANK 
          </span>
          <span
            class="sc-chPdSV hwfXHx"
            data-test="ExchangeSwiftCode"
          >
            SWIFTCode 
          </span>
          <span
            class="sc-kAzzGY bpboDy"
            data-test="ExchangeAccountDebit"
          >
            EXCHANGE_ACCOUNT_TO_DEBIT
          </span>
          <span
            class="sc-kAzzGY bpboDy"
            data-test="ExchangeTotalAmount"
          >
            EXCHANGE_TOTAL_AMOUNT_DEBIT
          </span>
          <span
            class="sc-kAzzGY bpboDy"
            data-test="ExchangeTypeOperation"
          >
            EXCHANGE_TYPE_OPERATION
          </span>
          <span
            class="sc-chPdSV hwfXHx"
            data-test="ExchangeNature"
          />
          <span
            class="sc-kAzzGY bpboDy"
            data-test="ExchangePrice"
          >
            EXCHANGE_PRICE
          </span>
          <span
            class="sc-kAzzGY bpboDy"
            data-test="ExchangeFEES"
          >
            EXCHANGE_FEES
          </span>
          <span
            class="sc-kAzzGY bpboDy"
            data-test="ExchangeIOF"
          >
            EXCHANGE_IOF
          </span>
          <span
            class="sc-kAzzGY bpboDy"
            data-test="ExchangeVET"
          >
            EXCHANGE_VET
          </span>
          <span
            class="sc-kAzzGY bpboDy"
            data-test="ExchangeDateDebit"
          >
            EXCHANGE_DATE_DEBIT
          </span>
          <span
            class="sc-kAzzGY bpboDy"
            data-test="ExchangeDateCredit"
          >
            EXCHANGE_DATE_CREDIT
          </span>
        </div>
      </div>
    </div>
    <div
      class="sc-VigVT fJjbvY"
      data-test="ExchangeTimer"
    >
      <span
        class="sc-jzJRlG iQhEUF"
      >
        <svg
          fill="none"
          height="20"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 0C8.02219 0 6.08879 0.58649 4.4443 1.6853C2.79981 2.78412 1.51809 4.3459 0.761209 6.17317C0.00433284 8.00043 -0.193701 10.0111 0.192152 11.9509C0.578004 13.8907 1.53041 15.6725 2.92894 17.0711C4.32746 18.4696 6.10929 19.422 8.0491 19.8079C9.98891 20.1937 11.9996 19.9957 13.8268 19.2388C15.6541 18.4819 17.2159 17.2002 18.3147 15.5557C19.4135 13.9112 20 11.9778 20 10C20 8.68678 19.7413 7.38642 19.2388 6.17317C18.7363 4.95991 17.9997 3.85752 17.0711 2.92893C16.1425 2.00035 15.0401 1.26375 13.8268 0.761205C12.6136 0.258658 11.3132 0 10 0ZM14 11H10C9.73479 11 9.48043 10.8946 9.2929 10.7071C9.10536 10.5196 9 10.2652 9 10V6C9 5.73478 9.10536 5.48043 9.2929 5.29289C9.48043 5.10536 9.73479 5 10 5C10.2652 5 10.5196 5.10536 10.7071 5.29289C10.8946 5.48043 11 5.73478 11 6V9H14C14.2652 9 14.5196 9.10536 14.7071 9.29289C14.8946 9.48043 15 9.73478 15 10C15 10.2652 14.8946 10.5196 14.7071 10.7071C14.5196 10.8946 14.2652 11 14 11Z"
            fill="#3976CF"
          />
        </svg>
      </span>
      <div
        class="sc-fjdhpX iUcPUh"
      >
        <span
          class="sc-jTzLTM dznmVL"
        >
          EXCHANGE_TIMER_TEXT
        </span>
        <span
          class="sc-jTzLTM dznmVL"
        >
          3
        </span>
        <span
          class="sc-jTzLTM dznmVL"
        >
          EXCHANGE_TIMER_TEXT_MIN
        </span>
        <span
          class="sc-jTzLTM dznmVL"
        >
          0
        </span>
        <span
          class="sc-jTzLTM dznmVL"
        >
          EXCHANGE_TIMER_TEXT_SEC
        </span>
      </div>
    </div>
    <div
      class="sc-kgoBCf hFliXa"
    >
      <button
        class="sc-cMljjf hqfGDE"
        data-test="BackButtonSummary"
        style="width: 100%;"
        type="outline"
      >
        <div
          class="sc-jAaTju coBPIt"
        >
          <div
            class="sc-jDwBTQ iIKeUD"
          >
            BACK
          </div>
        </div>
      </button>
      <button
        class="sc-cMljjf cxnipR"
        data-test="ContinueButtonSummary"
        style="width: 100%;"
        type="button"
      >
        <div
          class="sc-jAaTju coBPIt"
        >
          <div
            class="sc-jDwBTQ iIKeUD"
          >
            SEND
          </div>
        </div>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Summary Should Initial Load When selectedOperationNature Not Exist 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    style="overflow: visible;"
  >
    <div>
      <div
        class="sc-bdVaJa hYqYgx"
      >
        <div
          class="sc-bwzfXH kiQaOY"
        >
          <div
            class="sc-htpNat hbroam"
          >
            <span
              class="sc-bZQynM dGchKM"
              data-test="TitleSummary"
            >
              EXCHANGE_SUMMARY
            </span>
            <span
              class="sc-kAzzGY bpboDy"
              data-test="ExchangeValueTitle"
            >
              EXCHANGE_VALUE_TO_CONVERT
            </span>
            <span
              class="sc-kAzzGY bpboDy"
              data-test="ExchangeBeneficiary"
            >
              EXCHANGE_BENEFICIARY
            </span>
            <span
              class="sc-chPdSV hwfXHx"
              data-test="ExchangeFavoredName"
            >
              MockNameTest
            </span>
            <span
              class="sc-chPdSV hwfXHx"
              data-test="ExchangeFavoredAccountNumber"
            >
              EXCHANGE_ACCOUNT 
            </span>
            <span
              class="sc-chPdSV hwfXHx"
              data-test="ExchangeBankName"
            >
              EXCHANGE_BANK 
            </span>
            <span
              class="sc-chPdSV hwfXHx"
              data-test="ExchangeSwiftCode"
            >
              SWIFTCode 
            </span>
            <span
              class="sc-kAzzGY bpboDy"
              data-test="ExchangeAccountDebit"
            >
              EXCHANGE_ACCOUNT_TO_DEBIT
            </span>
            <span
              class="sc-chPdSV hwfXHx"
              data-test="AccountNumber"
            />
            <span
              class="sc-kAzzGY bpboDy"
              data-test="ExchangeTotalAmount"
            >
              EXCHANGE_TOTAL_AMOUNT_DEBIT
            </span>
            <span
              class="sc-kAzzGY bpboDy"
              data-test="ExchangePrice"
            >
              EXCHANGE_PRICE
            </span>
            <span
              class="sc-kAzzGY bpboDy"
              data-test="ExchangeFEES"
            >
              EXCHANGE_FEES
            </span>
            <span
              class="sc-kAzzGY bpboDy"
              data-test="ExchangeIOF"
            >
              EXCHANGE_IOF
            </span>
            <span
              class="sc-kAzzGY bpboDy"
              data-test="ExchangeVET"
            >
              EXCHANGE_VET
            </span>
            <span
              class="sc-kAzzGY bpboDy"
              data-test="ExchangeDateDebit"
            >
              EXCHANGE_DATE_DEBIT
            </span>
            <span
              class="sc-kAzzGY bpboDy"
              data-test="ExchangeDateCredit"
            >
              EXCHANGE_DATE_CREDIT
            </span>
          </div>
        </div>
      </div>
      <div
        class="sc-VigVT fJjbvY"
        data-test="ExchangeTimer"
      >
        <span
          class="sc-jzJRlG iQhEUF"
        >
          <svg
            fill="none"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 0C8.02219 0 6.08879 0.58649 4.4443 1.6853C2.79981 2.78412 1.51809 4.3459 0.761209 6.17317C0.00433284 8.00043 -0.193701 10.0111 0.192152 11.9509C0.578004 13.8907 1.53041 15.6725 2.92894 17.0711C4.32746 18.4696 6.10929 19.422 8.0491 19.8079C9.98891 20.1937 11.9996 19.9957 13.8268 19.2388C15.6541 18.4819 17.2159 17.2002 18.3147 15.5557C19.4135 13.9112 20 11.9778 20 10C20 8.68678 19.7413 7.38642 19.2388 6.17317C18.7363 4.95991 17.9997 3.85752 17.0711 2.92893C16.1425 2.00035 15.0401 1.26375 13.8268 0.761205C12.6136 0.258658 11.3132 0 10 0ZM14 11H10C9.73479 11 9.48043 10.8946 9.2929 10.7071C9.10536 10.5196 9 10.2652 9 10V6C9 5.73478 9.10536 5.48043 9.2929 5.29289C9.48043 5.10536 9.73479 5 10 5C10.2652 5 10.5196 5.10536 10.7071 5.29289C10.8946 5.48043 11 5.73478 11 6V9H14C14.2652 9 14.5196 9.10536 14.7071 9.29289C14.8946 9.48043 15 9.73478 15 10C15 10.2652 14.8946 10.5196 14.7071 10.7071C14.5196 10.8946 14.2652 11 14 11Z"
              fill="#3976CF"
            />
          </svg>
        </span>
        <div
          class="sc-fjdhpX iUcPUh"
        >
          <span
            class="sc-jTzLTM dznmVL"
          >
            EXCHANGE_TIMER_TEXT
          </span>
          <span
            class="sc-jTzLTM dznmVL"
          >
            3
          </span>
          <span
            class="sc-jTzLTM dznmVL"
          >
            EXCHANGE_TIMER_TEXT_MIN
          </span>
          <span
            class="sc-jTzLTM dznmVL"
          >
            0
          </span>
          <span
            class="sc-jTzLTM dznmVL"
          >
            EXCHANGE_TIMER_TEXT_SEC
          </span>
        </div>
      </div>
      <div
        class="sc-kgoBCf hFliXa"
      >
        <button
          class="sc-cMljjf hqfGDE"
          data-test="BackButtonSummary"
          style="width: 100%;"
          type="outline"
        >
          <div
            class="sc-jAaTju coBPIt"
          >
            <div
              class="sc-jDwBTQ iIKeUD"
            >
              BACK
            </div>
          </div>
        </button>
        <button
          class="sc-cMljjf cxnipR"
          data-test="ContinueButtonSummary"
          style="width: 100%;"
          type="button"
        >
          <div
            class="sc-jAaTju coBPIt"
          >
            <div
              class="sc-jDwBTQ iIKeUD"
            >
              SEND
            </div>
          </div>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-bdVaJa hYqYgx"
    >
      <div
        class="sc-bwzfXH kiQaOY"
      >
        <div
          class="sc-htpNat hbroam"
        >
          <span
            class="sc-bZQynM dGchKM"
            data-test="TitleSummary"
          >
            EXCHANGE_SUMMARY
          </span>
          <span
            class="sc-kAzzGY bpboDy"
            data-test="ExchangeValueTitle"
          >
            EXCHANGE_VALUE_TO_CONVERT
          </span>
          <span
            class="sc-kAzzGY bpboDy"
            data-test="ExchangeBeneficiary"
          >
            EXCHANGE_BENEFICIARY
          </span>
          <span
            class="sc-chPdSV hwfXHx"
            data-test="ExchangeFavoredName"
          >
            MockNameTest
          </span>
          <span
            class="sc-chPdSV hwfXHx"
            data-test="ExchangeFavoredAccountNumber"
          >
            EXCHANGE_ACCOUNT 
          </span>
          <span
            class="sc-chPdSV hwfXHx"
            data-test="ExchangeBankName"
          >
            EXCHANGE_BANK 
          </span>
          <span
            class="sc-chPdSV hwfXHx"
            data-test="ExchangeSwiftCode"
          >
            SWIFTCode 
          </span>
          <span
            class="sc-kAzzGY bpboDy"
            data-test="ExchangeAccountDebit"
          >
            EXCHANGE_ACCOUNT_TO_DEBIT
          </span>
          <span
            class="sc-chPdSV hwfXHx"
            data-test="AccountNumber"
          />
          <span
            class="sc-kAzzGY bpboDy"
            data-test="ExchangeTotalAmount"
          >
            EXCHANGE_TOTAL_AMOUNT_DEBIT
          </span>
          <span
            class="sc-kAzzGY bpboDy"
            data-test="ExchangePrice"
          >
            EXCHANGE_PRICE
          </span>
          <span
            class="sc-kAzzGY bpboDy"
            data-test="ExchangeFEES"
          >
            EXCHANGE_FEES
          </span>
          <span
            class="sc-kAzzGY bpboDy"
            data-test="ExchangeIOF"
          >
            EXCHANGE_IOF
          </span>
          <span
            class="sc-kAzzGY bpboDy"
            data-test="ExchangeVET"
          >
            EXCHANGE_VET
          </span>
          <span
            class="sc-kAzzGY bpboDy"
            data-test="ExchangeDateDebit"
          >
            EXCHANGE_DATE_DEBIT
          </span>
          <span
            class="sc-kAzzGY bpboDy"
            data-test="ExchangeDateCredit"
          >
            EXCHANGE_DATE_CREDIT
          </span>
        </div>
      </div>
    </div>
    <div
      class="sc-VigVT fJjbvY"
      data-test="ExchangeTimer"
    >
      <span
        class="sc-jzJRlG iQhEUF"
      >
        <svg
          fill="none"
          height="20"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 0C8.02219 0 6.08879 0.58649 4.4443 1.6853C2.79981 2.78412 1.51809 4.3459 0.761209 6.17317C0.00433284 8.00043 -0.193701 10.0111 0.192152 11.9509C0.578004 13.8907 1.53041 15.6725 2.92894 17.0711C4.32746 18.4696 6.10929 19.422 8.0491 19.8079C9.98891 20.1937 11.9996 19.9957 13.8268 19.2388C15.6541 18.4819 17.2159 17.2002 18.3147 15.5557C19.4135 13.9112 20 11.9778 20 10C20 8.68678 19.7413 7.38642 19.2388 6.17317C18.7363 4.95991 17.9997 3.85752 17.0711 2.92893C16.1425 2.00035 15.0401 1.26375 13.8268 0.761205C12.6136 0.258658 11.3132 0 10 0ZM14 11H10C9.73479 11 9.48043 10.8946 9.2929 10.7071C9.10536 10.5196 9 10.2652 9 10V6C9 5.73478 9.10536 5.48043 9.2929 5.29289C9.48043 5.10536 9.73479 5 10 5C10.2652 5 10.5196 5.10536 10.7071 5.29289C10.8946 5.48043 11 5.73478 11 6V9H14C14.2652 9 14.5196 9.10536 14.7071 9.29289C14.8946 9.48043 15 9.73478 15 10C15 10.2652 14.8946 10.5196 14.7071 10.7071C14.5196 10.8946 14.2652 11 14 11Z"
            fill="#3976CF"
          />
        </svg>
      </span>
      <div
        class="sc-fjdhpX iUcPUh"
      >
        <span
          class="sc-jTzLTM dznmVL"
        >
          EXCHANGE_TIMER_TEXT
        </span>
        <span
          class="sc-jTzLTM dznmVL"
        >
          3
        </span>
        <span
          class="sc-jTzLTM dznmVL"
        >
          EXCHANGE_TIMER_TEXT_MIN
        </span>
        <span
          class="sc-jTzLTM dznmVL"
        >
          0
        </span>
        <span
          class="sc-jTzLTM dznmVL"
        >
          EXCHANGE_TIMER_TEXT_SEC
        </span>
      </div>
    </div>
    <div
      class="sc-kgoBCf hFliXa"
    >
      <button
        class="sc-cMljjf hqfGDE"
        data-test="BackButtonSummary"
        style="width: 100%;"
        type="outline"
      >
        <div
          class="sc-jAaTju coBPIt"
        >
          <div
            class="sc-jDwBTQ iIKeUD"
          >
            BACK
          </div>
        </div>
      </button>
      <button
        class="sc-cMljjf cxnipR"
        data-test="ContinueButtonSummary"
        style="width: 100%;"
        type="button"
      >
        <div
          class="sc-jAaTju coBPIt"
        >
          <div
            class="sc-jDwBTQ iIKeUD"
          >
            SEND
          </div>
        </div>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
